# airbnb-regulation

./: .gitignore  CODEOWNERS  LICENSE  README.md
.github/: pull_request_template.md
analytics/: pyproject.toml
analytics/models/: address.py  listing.py  policy.py  policy_client.py  policy_results.py
analytics/policy/: README.md  pyproject.toml
analytics/policy/docs/: policy_evaluation_architecture.drawio  sw_design_doc.md
analytics/policy/policies/: registration_number_policies.py
analytics/policy/services/: business_licence_client.py  registration_number_policies.py
analytics/policy/src/services/: business_licences_client.py  listing.py
analytics/policy/src/tests/integration/: test_sample_integration.py
analytics/policy/src/utils/: dict_utils.py
analytics/policy/tests/integration/: test_sample_integration.py
analytics/policy/tests/unit/: test_business_licence_client.py  test_registration_number_policies.py  test_sample_unit.py
analytics/policy/utils/: dict_utils.py
analytics/report/: README.md  pyproject.toml
analytics/report/src/: main.py
analytics/report/src/listing_store/: listing_store.py
analytics/report/src/report_generation/: report_generator.py
analytics/report/src/report_generation/template/: reporttemplate.html
analytics/report/src/report_store/: output.html
analytics/report/tests/unit/: test_listing_store.py
ingestion/: README.md  requirements.txt
ingestion/airbnb_scrapping/: README.md  scrapy.cfg
ingestion/airbnb_scrapping/airbnb_listings/: config.ini  items.py  middlewares.py  pipelines.py  settings.py
ingestion/airbnb_scrapping/airbnb_listings/spiders/: listing_spider.py
