[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "Evaluation Module & Report Module"
authors = ["Alja Čekada <alja.cekada@gmail.com>, Nam Anh Mai <maithenamanh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, ^3.10"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
