[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "Evaluation Module & Report Module"
authors = ["Alja Čekada <alja.cekada@gmail.com>, Nam Anh Mai <maithenamanh@gmail.com>"]
readme = ["policy/README.md", "report/README.md"]
packages = [
  { include = "models" },
  { include = "policy" },
  { include = "report" }
]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.3"
urllib3 = "^2.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.2.1"

[tool.coverage.run]
branch = true
source = ["policy/*", "report/*"]

[tool.coverage.report]
fail_under = 80
ignore_errors = true
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.mypy]
files = ["policy/**/*", "report/**/*"]
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

check_untyped_defs = true

disallow_untyped_defs = true
disallow_any_unimported = true

[tool.pytest.ini_options]
# Choose import mode based on
# https://docs.pytest.org/en/7.2.x/explanation/goodpractices.html#which-import-mode
addopts = [
    "--import-mode=importlib",
]
testpaths = ["policy/tests", "report/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
